added pig  video

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
 
+
+    <video autoplay muted loop id="myVideo">
+      <source src="./video/pigs.mp4" type="video/mp4">
+    </video>
     <form onsubmit="return false">
       <h1>PIG LATIN TRANSLATOR</h1>
     <hr/>
