more styling and changed button

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <hr/>
     <p>Type a Word or Phrase into the Box to Translate</p>
       <div><textarea id="display-element-to-string"></textarea></div>
+      <div class="wrap"><button type="button" class="button" onclick="pigLatin()">TRANSLATE</button></div>
       
-      <button type="button" class="glow-on-hover" onclick="pigLatin()">CONVERT</button>
       <p id="string-display"></p>
     </form>
     
